objects/Distribuicao_de_cota_de_produto__c.object
<CustomObject>
    <fields>
        <fullName>Bandeira__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bandeira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cota__c</fullName>
        <label>Cota</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executivo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executivo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distribuicoes_de_cota_de_produto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional de vendas</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Distribuições de cota de produto</relationshipLabel>
        <relationshipName>Distribuicoes_de_cota_de_produto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regra_de_cota_de_produto__c</fullName>
        <label>Regra de cota de produto</label>
        <referenceTo>Regra_de_cota_de_produto__c</referenceTo>
        <relationshipLabel>Distribuições de cota de produto</relationshipLabel>
        <relationshipName>Distribuicoes_de_cota_de_produto</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Regra_de_cota_de_produto__r.Sku__c</formula>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_canal__c</fullName>
        <label>Sub-canal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Canal__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Atacadista</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>Canais Alternativos</fullName>
                </value>
                <value>
                    <fullName>Delicatessen</fullName>
                </value>
                <value>
                    <fullName>Distribuidor</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Night club</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Varejo Regional</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Distribuição de cota de produto</label>
    <nameField>
        <displayFormat>DCP{000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribuições de cota de produto</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valida_canal</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Regra_de_cota_de_produto__r.Canal__c  , ISBLANK( text(Canal__c) ))</errorConditionFormula>
        <errorMessage>A regra escolhida obriga o preenchimento do canal de vendas.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_regional</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Regra_de_cota_de_produto__r.Regional__c , ISBLANK( Regional__c ))</errorConditionFormula>
        <errorMessage>A regra escolhida obriga o preenchimento da regional de vendas.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_subcanal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Regra_de_cota_de_produto__r.Subcanal__c  , ISBLANK( text( Sub_canal__c ) ))</errorConditionFormula>
        <errorMessage>A regra escolhida obriga o preenchimento do subcanal de vendas.</errorMessage>
    </validationRules>
</CustomObject>